# workshop-pipelines

./: .gitignore  README.md  lecture_pipelines.pptx  notebook_1_importing_preparing.ipynb  notebook_2_abt_creation.ipynb  pipelines_workshop.ipynb  pyproject.toml
data/processed/: expenditure.csv  income.csv
lib/: utils.py
